gen/grammar/LPGrammarParser.java
// Generated from D:/UNALArchivo/Lenguajes de Programación/SemanticAnalyzer/grammar\LPGrammar.g4 by ANTLR 4.12.0
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LPGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, ENDIF=3, END=4, SUB=5, TEXTWINDOW=6, THEN=7, ENDSUB=8, ARRAY=9, 
		ELSEIF=10, FOR=11, WHILE=12, ENDWHILE=13, TO=14, ENDFOR=15, GOTO=16, PROGRAM=17, 
		STACK=18, STEP=19, CLOCK=20, AND=21, OR=22, PLUS=23, MINUS=24, MULTIPLY=25, 
		DIVIDE=26, LEQ=27, GEQ=28, LOWER=29, GREATER=30, EQUAL=31, DIFF=32, COMMA=33, 
		SEMICOLON=34, COLON=35, LPAREN=36, RPAREN=37, LBRACKET=38, RBRACKET=39, 
		PERIOD=40, TRUE=41, FALSE=42, IDENTIFIER=43, NUMBER=44, TEXT=45, COMMENT=46, 
		SPACE=47;
	public static final int
		RULE_s = 0, RULE_functiondeclaration = 1, RULE_ifdeclaration = 2, RULE_ifcontinuation = 3, 
		RULE_whiledeclaration = 4, RULE_fordeclaration = 5, RULE_fordeclarationcomp = 6, 
		RULE_labelcall = 7, RULE_statement = 8, RULE_statementcomp = 9, RULE_arrayaccessor = 10, 
		RULE_mainstatement = 11, RULE_mainstatementscomp = 12, RULE_expression = 13, 
		RULE_actualexpression = 14, RULE_expressionhelper = 15, RULE_notcomparatorexp = 16, 
		RULE_notcomparatorexphelper = 17, RULE_subexpression = 18, RULE_operator = 19, 
		RULE_andoroperator = 20, RULE_comparator = 21, RULE_specialcall = 22, 
		RULE_specialcallkeyword = 23, RULE_arguments = 24, RULE_optionalarg = 25, 
		RULE_furtherarguments = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "functiondeclaration", "ifdeclaration", "ifcontinuation", "whiledeclaration", 
			"fordeclaration", "fordeclarationcomp", "labelcall", "statement", "statementcomp", 
			"arrayaccessor", "mainstatement", "mainstatementscomp", "expression", 
			"actualexpression", "expressionhelper", "notcomparatorexp", "notcomparatorexphelper", 
			"subexpression", "operator", "andoroperator", "comparator", "specialcall", 
			"specialcallkeyword", "arguments", "optionalarg", "furtherarguments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'If'", "'Else'", "'EndIf'", "'End'", "'Sub'", "'TextWindow'", 
			"'Then'", "'EndSub'", "'Array'", "'ElseIf'", "'For'", "'While'", "'EndWhile'", 
			"'To'", "'EndFor'", "'Goto'", "'Program'", "'Stack'", "'Step'", "'Clock'", 
			"'And'", "'Or'", "'+'", "'-'", "'*'", "'/'", "'<='", "'>='", "'<'", "'>'", 
			"'='", "'<>'", "','", "';'", "':'", "'('", "')'", "'['", "']'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "ENDIF", "END", "SUB", "TEXTWINDOW", "THEN", "ENDSUB", 
			"ARRAY", "ELSEIF", "FOR", "WHILE", "ENDWHILE", "TO", "ENDFOR", "GOTO", 
			"PROGRAM", "STACK", "STEP", "CLOCK", "AND", "OR", "PLUS", "MINUS", "MULTIPLY", 
			"DIVIDE", "LEQ", "GEQ", "LOWER", "GREATER", "EQUAL", "DIFF", "COMMA", 
			"SEMICOLON", "COLON", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "PERIOD", 
			"TRUE", "FALSE", "IDENTIFIER", "NUMBER", "TEXT", "COMMENT", "SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LPGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LPGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public MainstatementContext mainstatement() {
			return getRuleContext(MainstatementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LPGrammarParser.EOF, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			setState(58);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				mainstatement();
				setState(55);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctiondeclarationContext extends ParserRuleContext {
		public TerminalNode SUB() { return getToken(LPGrammarParser.SUB, 0); }
		public TerminalNode IDENTIFIER() { return getToken(LPGrammarParser.IDENTIFIER, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode ENDSUB() { return getToken(LPGrammarParser.ENDSUB, 0); }
		public FunctiondeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functiondeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterFunctiondeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitFunctiondeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitFunctiondeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctiondeclarationContext functiondeclaration() throws RecognitionException {
		FunctiondeclarationContext _localctx = new FunctiondeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functiondeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(SUB);
			setState(61);
			match(IDENTIFIER);
			setState(62);
			statement();
			setState(63);
			match(ENDSUB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfdeclarationContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(LPGrammarParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(LPGrammarParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LPGrammarParser.RPAREN, 0); }
		public TerminalNode THEN() { return getToken(LPGrammarParser.THEN, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public IfcontinuationContext ifcontinuation() {
			return getRuleContext(IfcontinuationContext.class,0);
		}
		public IfdeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifdeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterIfdeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitIfdeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitIfdeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfdeclarationContext ifdeclaration() throws RecognitionException {
		IfdeclarationContext _localctx = new IfdeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ifdeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(IF);
			setState(66);
			match(LPAREN);
			setState(67);
			expression();
			setState(68);
			match(RPAREN);
			setState(69);
			match(THEN);
			setState(70);
			statement();
			setState(71);
			ifcontinuation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfcontinuationContext extends ParserRuleContext {
		public TerminalNode ENDIF() { return getToken(LPGrammarParser.ENDIF, 0); }
		public TerminalNode ELSE() { return getToken(LPGrammarParser.ELSE, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode ELSEIF() { return getToken(LPGrammarParser.ELSEIF, 0); }
		public TerminalNode LPAREN() { return getToken(LPGrammarParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LPGrammarParser.RPAREN, 0); }
		public TerminalNode THEN() { return getToken(LPGrammarParser.THEN, 0); }
		public IfcontinuationContext ifcontinuation() {
			return getRuleContext(IfcontinuationContext.class,0);
		}
		public IfcontinuationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifcontinuation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterIfcontinuation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitIfcontinuation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitIfcontinuation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfcontinuationContext ifcontinuation() throws RecognitionException {
		IfcontinuationContext _localctx = new IfcontinuationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifcontinuation);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENDIF:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(ENDIF);
				}
				break;
			case ELSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(ELSE);
				setState(75);
				statement();
				setState(76);
				match(ENDIF);
				}
				break;
			case ELSEIF:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(ELSEIF);
				setState(79);
				match(LPAREN);
				setState(80);
				expression();
				setState(81);
				match(RPAREN);
				setState(82);
				match(THEN);
				setState(83);
				statement();
				setState(84);
				ifcontinuation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhiledeclarationContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(LPGrammarParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(LPGrammarParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LPGrammarParser.RPAREN, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode ENDWHILE() { return getToken(LPGrammarParser.ENDWHILE, 0); }
		public WhiledeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whiledeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterWhiledeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitWhiledeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitWhiledeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhiledeclarationContext whiledeclaration() throws RecognitionException {
		WhiledeclarationContext _localctx = new WhiledeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whiledeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(WHILE);
			setState(89);
			match(LPAREN);
			setState(90);
			expression();
			setState(91);
			match(RPAREN);
			setState(92);
			statement();
			setState(93);
			match(ENDWHILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FordeclarationContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(LPGrammarParser.FOR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(LPGrammarParser.IDENTIFIER, 0); }
		public TerminalNode EQUAL() { return getToken(LPGrammarParser.EQUAL, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode TO() { return getToken(LPGrammarParser.TO, 0); }
		public FordeclarationcompContext fordeclarationcomp() {
			return getRuleContext(FordeclarationcompContext.class,0);
		}
		public FordeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fordeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterFordeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitFordeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitFordeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FordeclarationContext fordeclaration() throws RecognitionException {
		FordeclarationContext _localctx = new FordeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fordeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(FOR);
			setState(96);
			match(IDENTIFIER);
			setState(97);
			match(EQUAL);
			setState(98);
			expression();
			setState(99);
			match(TO);
			setState(100);
			expression();
			setState(101);
			fordeclarationcomp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FordeclarationcompContext extends ParserRuleContext {
		public TerminalNode STEP() { return getToken(LPGrammarParser.STEP, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode ENDFOR() { return getToken(LPGrammarParser.ENDFOR, 0); }
		public FordeclarationcompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fordeclarationcomp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterFordeclarationcomp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitFordeclarationcomp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitFordeclarationcomp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FordeclarationcompContext fordeclarationcomp() throws RecognitionException {
		FordeclarationcompContext _localctx = new FordeclarationcompContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fordeclarationcomp);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STEP:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(STEP);
				setState(104);
				expression();
				setState(105);
				statement();
				setState(106);
				match(ENDFOR);
				}
				break;
			case IF:
			case TEXTWINDOW:
			case ARRAY:
			case FOR:
			case WHILE:
			case ENDFOR:
			case GOTO:
			case PROGRAM:
			case STACK:
			case CLOCK:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				statement();
				setState(109);
				match(ENDFOR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelcallContext extends ParserRuleContext {
		public TerminalNode GOTO() { return getToken(LPGrammarParser.GOTO, 0); }
		public TerminalNode IDENTIFIER() { return getToken(LPGrammarParser.IDENTIFIER, 0); }
		public LabelcallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelcall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterLabelcall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitLabelcall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitLabelcall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelcallContext labelcall() throws RecognitionException {
		LabelcallContext _localctx = new LabelcallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_labelcall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(GOTO);
			setState(114);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(LPGrammarParser.IDENTIFIER, 0); }
		public StatementcompContext statementcomp() {
			return getRuleContext(StatementcompContext.class,0);
		}
		public IfdeclarationContext ifdeclaration() {
			return getRuleContext(IfdeclarationContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public WhiledeclarationContext whiledeclaration() {
			return getRuleContext(WhiledeclarationContext.class,0);
		}
		public FordeclarationContext fordeclaration() {
			return getRuleContext(FordeclarationContext.class,0);
		}
		public LabelcallContext labelcall() {
			return getRuleContext(LabelcallContext.class,0);
		}
		public SpecialcallContext specialcall() {
			return getRuleContext(SpecialcallContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_statement);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(IDENTIFIER);
				setState(117);
				statementcomp();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				ifdeclaration();
				setState(119);
				statement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				whiledeclaration();
				setState(122);
				statement();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				fordeclaration();
				setState(125);
				statement();
				}
				break;
			case GOTO:
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				labelcall();
				setState(128);
				statement();
				}
				break;
			case TEXTWINDOW:
			case ARRAY:
			case PROGRAM:
			case STACK:
			case CLOCK:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				specialcall();
				setState(131);
				statement();
				}
				break;
			case ELSE:
			case ENDIF:
			case ENDSUB:
			case ELSEIF:
			case ENDWHILE:
			case ENDFOR:
				enterOuterAlt(_localctx, 7);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementcompContext extends ParserRuleContext {
		public ArrayaccessorContext arrayaccessor() {
			return getRuleContext(ArrayaccessorContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(LPGrammarParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(LPGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LPGrammarParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(LPGrammarParser.COLON, 0); }
		public StatementcompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementcomp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).enterStatementcomp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPGrammarListener ) ((LPGrammarListener)listener).exitStatementcomp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPGrammarVisitor ) return ((LPGrammarVisitor<? extends T>)visitor).visitStatementcomp(this);
			else return visitor.visitChildren(this);
		}
	}
